2008-07-11  Tomas Mraz <t8m@centrum.cz>

	* modules/pam_unix/pam_unix_acct.c (_unix_run_verify_binary): Do
	not close the pipe descriptor in borderline case (#2009766)
	* modules/pam_unix/pam_unix_passwd.c (_unix_run_update_binary):
	Likewise.
	* modules/pam_unix/support.c (_unix_run_helper_binary): Likewise.
	* modules/pam_unix/support.h: Define upper limit of fds we will
	attempt to close.

2008-07-09  Thorsten Kukuk  <kukuk@thkukuk.de>

	* modules/pam_exec/pam_exec.c (call_exec): Move all variable
	declaration to begin of a block (#1976310).

	* xtests/tst-pam_group1.c (run_test): Move no_grps declaration
	to begin of function (#1976310).

	* modules/pam_securetty/pam_securetty.8.xml: Replace
	PAM_IGNORE with PAM_USER_UNKNOWN (#1994330).

	* modules/pam_tally/pam_tally.c: Add support for silent and
	no_log_info options.
	* modules/pam_tally/pam_tally.8.xml: Document silent and
	no_log_info options.

2008-07-08  Thorsten Kukuk  <kukuk@thkukuk.de>

	* modules/pam_unix/passverify.c (verify_pwd_hash): Adjust debug
	statement.

2008-06-22  Thorsten Kukuk  <kukuk@thkukuk.de>

	* modules/pam_unix/unix_chkpwd.c (main): Fix compiling without
	audit support.

	* modules/pam_cracklib/pam_cracklib.8.xml: Fix typo in ucredit
	description (reported by Wayne Pollock <pollock@acm.org>)

2008-06-19  Tomas Mraz <t8m@centrum.cz>

	* modules/pam_succeed_if/pam_succeed_if.c (pam_sm_authenticate):
	Detect configuration errors. Fail on incomplete condition.

2008-05-20  Tomas Mraz <t8m@centrum.cz>

	* configure.in: Work correctly with autoconf-2.62.

2008-05-19  Tomas Mraz <t8m@centrum.cz>

	* doc/man/pam_getenv.3.xml: Correct the pam_getenv documentation.

	* doc/man/pam_prompt.3.xml: Add missing description.

2008-05-14  Kjartan Maraas <kmaraas@gnome.org>

	* po/nb.po: Updated translation.

2008-05-14  Sulyok Péter <peti@sulyok.hu>

	* po/hu.po: Updated translation.

2008-05-14  Tomas Mraz <t8m@centrum.cz>

	* libpam/pam_modutil_getgrgid.c: Replace hardcoded constant with